# rust-basic

adder/src/: lib.rs
common_collections/src/: main.rs
common_concept/: common_concept.rs
enums-pattern/: Cargo.toml
enums-pattern/src/: main.rs
error-handling/: Cargo.toml
error-handling/src/: main.rs
generic/src/: lib.rs  main.rs
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/: ownership.rs
packaging/restaurant/: Cargo.toml
packaging/restaurant/src/: front_of_house.rs  lib.rs
struct-basic/src/: main.rs
